# canons

./: .gitignore  Pipfile  README.md  prolation_canon.ipynb  pyproject.toml
optimizer/: canon.ly  canon.py  meter_rewrite_example.py  optimal_canon.py  pyproject.toml  simplified_prolation_canon.ly  three_voice_canon_fixed.ly
