[tool.poetry]
name = "canons"
version = "0.1.0"
description = ""
authors = ["Jeff Trevino <jeffrey.trevino@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
abjad = "^3.15"
jupyter = "^1.0.0"
pandas = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
